--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -261,7 +261,9 @@ Full-Width Styles
 *******************************************************************************/
 
 .outer {
+  bottom: 0px;
   height: 100%;
+  position: absolute;
   text-align: center;
   width: 100%;
 }
